--- a/literature.bib
+++ b/literature.bib
@@ -58320,4 +58320,62 @@ African Linguistics",
 	year="2003"
 }
 
+@inproceedings{frank2019interaction,
+  title={The interaction between structure and meaning in sentence comprehension. Recurrent neural networks and reading times},
+  author={Frank, Stefan L. and Hoeks, John C. J.},
+  booktitle={Proceedings of the 41st Annual Conference of the Cognitive Science Society},
+  pages={337--343},
+  year={2019},
+  organization={[Sl: sn]}
+}
+
+@article{aurnhammer2019evaluating,
+author={Christoph Aurnhammer and Stefan L. Frank},
+title={Evaluating information-theoretic measures of word prediction in naturalistic sentence reading},
+journal={Neuropsychologia},
+volume={134},
+year={2019},
+pages={107198}}
+
+@inproceedings{wilcox2020predictive,
+author={Ethan G. Wilcox and Jon Gauthier and Jennifer Hu and Peng Qian and Roger P. Levy},
+title={On the predictive power of neural language models for human real-time comprehension behavior},
+year={2020},
+booktitle={Proceedings of CogSci 2020},
+pages={1707--1713}}
+
+@inproceedings{DBLP:conf/acl/FutrellDS20,
+  author    = {Richard Futrell and
+               William Dyer and
+               Gregory Scontras},
+  editor    = {Dan Jurafsky and
+               Joyce Chai and
+               Natalie Schluter and
+               Joel R. Tetreault},
+  title     = {What determines the order of adjectives in English? Comparing efficiency-based
+               theories using dependency treebanks},
+  booktitle = {Proceedings of the 58th Annual Meeting of the Association for Computational
+               Linguistics, {ACL} 2020, Online, July 5-10, 2020},
+  pages     = {2003--2012},
+  publisher = {Association for Computational Linguistics},
+  year      = {2020},
+  url       = {https://doi.org/10.18653/v1/2020.acl-main.181},
+  doi       = {10.18653/v1/2020.acl-main.181},
+  timestamp = {Fri, 08 Jan 2021 21:20:30 +0100},
+  biburl    = {https://dblp.org/rec/conf/acl/FutrellDS20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{ryan2010variable,
+	title="Variable affix order: Grammar and learning",
+	author="Kevin M. {Ryan}",
+	journal="Language",
+	volume="86",
+	number="4",
+	pages="758--791",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1712805789",
+	year="2010"
+}
+
+
 
